if_vlan: Always default to 802.1q.

There is no reason for this fallback to be conditional on COMPAT_FREEBSD12.

PR:		273539
MFC after:	1 week
Sponsored by:	Klara, Inc.
Sponsored by:	NetApp, Inc.
Reviewed by:	melifaro, allanjude
Differential Revision:	https://reviews.freebsd.org/D41717